--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="onCalculate()">
   <div class="input-group">
     <div>
       <label>Initial Investment</label>
@@ -19,5 +19,5 @@
       <input type="number" name="duration" [(ngModel)]="duration" />
     </div>
   </div>
-  <button (click)="onCalculate()">Calculate</button>
+  <button type="submit" >Calculate</button>
 </form>
