--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header />
-<app-user-input />
-<app-output />
+<app-user-input (calculate)="onCalculateInvestmentResults($event)" />
+<app-output [investmentResult]="result" />
